# AetherGIS

./: .dockerignore  .env.example  .env.production.example  .gitignore  ARCHITECTURE.md  Caddyfile  DEVELOPER_GUIDE.md  Dockerfile  Dockerfile.worker  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
Guides/: env on cloud.txt  nasa_gibs_user_guide.md  oci commands.text  production_readiness_report.md
backend/app/: config.py  db.py  main.py
backend/app/api/routes/: advanced.py  analytics.py  auth.py  jobs.py  layers.py  pipeline.py  sessions.py
backend/app/middleware/: security.py
backend/app/models/: db_models.py  schemas.py
backend/app/services/: alert_system_v2.py  change_anomaly.py  confidence.py  explainability_engine.py  geo_analytics.py  heatmap_gen.py  interpolation.py  job_manager.py  job_store.py  layer_capabilities.py  layer_catalog.py  performance.py  persistence.py  pipeline.py  prediction_engine.py  preprocessing.py  report_service.py  satellite_providers.py  session_lock.py  temporal_checker.py  tile_cache.py  time_series_analytics.py  trajectory_tracker.py  uncertainty_maps.py  video_gen.py  wms_client.py
backend/app/tasks/: celery_app.py
backend/app/utils/: logging.py
backend/data/: aethergis.db
backend/data/audit/: 3a1ca1ea-8a0d-4b3f-ae09-923e09f4ce2b.json  3d142274-cf0f-4824-be7c-38ac247aa257.json  4631ecc1-8cfd-4975-aeab-4d06cb6043d1.json  4e5cd5c1-e806-41cc-893f-6f0eba1e45b7.json  4ee1569f-2565-4e08-a21a-b53da975be48.json  5e8e30cb-d3c9-42a7-ab0d-eb28973ef11f.json  679006fb-bbbd-4395-b9ae-b6628c001904.json  67c50dad-7787-4d15-b3ac-58271580cb5b.json  686fcafb-4d82-4fb8-a8d1-e9f78cb7bb76.json  6f6b66b2-f461-4da3-99f2-404054517950.json  7c469d25-b065-47be-801a-2fc1fec0ba10.json  96eece22-d64e-41a2-b0fa-6fc5f2aeaee8.json  9810cbf6-f24f-45a6-9ec8-c20db0f6169d.json  9c4605c3-6e9a-463a-9de5-77e880eb4661.json  a7a26d49-2654-4c19-8384-2754251d4452.json  c2e3c0e8-044b-4e9b-9bc2-01f425f6c355.json  dd98fd41-ab13-443f-902e-abf63d1a2d0e.json  e4bd066c-bcf4-4e81-81d4-2c48d214d902.json  e71fe7b3-230d-4641-a64d-ef3fb51132a5.json  ef9c2355-0ef4-454e-ae58-8263422048dd.json  f686283b-394d-4622-af93-fa05adbf1971.json  fa5e0f1c-fca8-4aed-bed9-d43d24768581.json  fae8ad44-5dc1-446e-ab2d-db52490baa26.json
backend/data/checkpoints/3a1ca1ea-8a0d-4b3f-ae09-923e09f4ce2b/: interpolation.json
backend/data/checkpoints/3d142274-cf0f-4824-be7c-38ac247aa257/: ingestion.json  preprocessing.json
backend/data/checkpoints/4631ecc1-8cfd-4975-aeab-4d06cb6043d1/: preprocessing.json
backend/data/metrics/: global.json
backend/data/runs/3a1ca1ea-8a0d-4b3f-ae09-923e09f4ce2b/: manifest.json
backend/tests/: test_access_controls.py  test_api_pipeline.py  test_api_sessions.py  test_auth.py  test_confidence.py  test_film_engine.py  test_health.py  test_mosdac.py  test_preprocessing.py  test_production_modules.py  test_session_lock.py  test_wms_client.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AdvancedOverlaysPanel.tsx  AlertsPanel.tsx  AnalysisPanel.tsx  DisclaimerBanner.tsx  ExportPanel.tsx  LayerControls.tsx  MapOverlayManager.tsx  MapViewer.tsx  MenuBar.tsx  MetricsPanel.tsx  PipelineProgress.tsx  PlaybackControls.tsx  PredictionPanel.tsx  ReplayPanel.tsx  ServerStatus.tsx  SessionManager.tsx  TemporalConsistencyPanel.tsx  TimelineScrubber.tsx
frontend/src/store/: useStore.ts
frontend/src/utils/: layerDefaults.ts
scripts/: cloud-sync.sh  download_film_weights.py  download_weights.py  run_dev.ps1  setup_models.py  smart_setup.py
scripts/oci/: backup.sh  deploy.sh  init-server.sh
(+104 files in other folders)
